deploy/base/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pcbridge-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pcbridge-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pcbridge-web
    spec:
      containers:
        - name: web
          image: partnercenterbridge-web
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              memory: 64Mi
