deploy/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pcbridge-web
spec:
  selector:
    app.kubernetes.io/name: pcbridge-web
  ports:
    - name: http
      port: 80
      targetPort: 80
